--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,29 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@/components/*":[
+        "src/components/*"
+      ],
+      "@/icons/*":[
+        "src/components/icons/*"
+      ],
+      "@/sections/*":[
+        "src/components/sections/*"
+      ],
+      "@/script/*":[
+        "public/js/*"
+      ],
+      "@/ui/*":[
+        "src/components/UI/*"
+      ],  
+      "@/cv":[
+        "./cv.json"
+      ]
+    }
+  }
 }
